my_ros_ws/log/build_2024-04-20_14-08-42/motor_ctl/stderr.log
  File "/home/group1/my_ros_ws/install/motor_ctl/lib/python3.10/site-packages/motor_ctl/subscriber.py", line 5
    from ../../../dynamixel_python/dynamixel_python/examples import v_test
           ^
SyntaxError: invalid syntax

